# HappyBird

./: .gitignore  CMakeLists.txt  README.md
HappyBird/: HappyBird.sln
HappyBird/Debug/: HappyBird.ilk
HappyBird/HappyBird/: Bird.cpp  Bird.h  HappyBird.cpp  HappyBird.h  HappyBird.vcxproj  HappyBird.vcxproj.filters  HappyBirdTest.cpp  Obstacle.cpp  Obstacle.h
HappyBird/HappyBird/Debug/: CL.read.1.tlog  CL.write.1.tlog  HappyBird.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
installer/: happybird.iss  install.sh  uninstall.sh
